# Helldivers-Voice-Stratagem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.yml  main.py  notes.md  requirements.txt  run.bat  stratagem.yml
data/: config.yml  stratagem.yml
hdvs/: __init__.py  app.py  main.py
hdvs/core/: __init__.py  options.py  status.py  stratagem.py
hdvs/util/: Collapsible.py  __init__.py
include/HDVS/: collapsible.h  config.h  hdvs.h  mainwindow.h  options.h  status.h  stratagem.h  stratpane.h
include/HDVS/util/: common-sdl.h
src/: collapsible.cpp  common-sdl.cpp  config.cpp  hdvs.cpp  main.cpp  mainwindow.cpp  options.cpp  status.cpp  stratagem.cpp  stratpane.cpp
